force-app/main/default/objects/Head_Office__c/Head_Office__c.object-meta.xml
<CustomObject>
    <label>Head Office</label>
    <nameField>
        <label>Head Office Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>KFC Head Offices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>