force-app/main/default/objects/Head_Office__c/fields/Company_Policy__c.field-meta.xml
<CustomField>
    <fullName>Company_Policy__c</fullName>
    <label>Company Policy</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>