force-app/main/default/objects/Head_Office__c/fields/Manger_name__c.field-meta.xml
<CustomField>
    <fullName>Manger_name__c</fullName>
    <label>Manger name</label>
    <length>55</length>
    <type>Text</type>
</CustomField>