force-app/main/default/objects/Head_Office__c/fields/No_of_Employes__c.field-meta.xml
<CustomField>
    <fullName>No_of_Employes__c</fullName>
    <label>No of Employes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>