force-app/main/default/objects/Head_Office__c/fields/Partnership__c.field-meta.xml
<CustomField>
    <fullName>Partnership__c</fullName>
    <label>Partnership</label>
    <length>55</length>
    <type>Text</type>
</CustomField>